# server

./: CMakeLists.txt
src/: main.cpp
src/controllers/: AuthController.cpp  SimpleController.cpp
src/controllers/include/: AuthController.hpp  SimpleController.hpp
src/models/: User.cpp  User.hpp
